--- a/src/assets/scss/page.scss
+++ b/src/assets/scss/page.scss
@@ -20,7 +20,7 @@
 @import "vendor/themify-icons";
 @import "vendor/jarallax";
 // @import "vendor/slick";
-@import "vendor/lity";
+// @import "vendor/lity";
 @import "vendor/typedjs";
 
 // Content
