--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -79,6 +79,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .pricing-3 {
   h6 { height: 2rem }
+  h4 { height: 4.5rem }
   li {
     position: relative;
     margin-left: 1em;
