--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -571,7 +571,7 @@ $input-border-radius:                   2px !default;
 $input-border-radius-lg:                2px !default;
 $input-border-radius-sm:                2px !default;
 
-$custom-control-indicator-size:                 18px !default;
+$custom-control-indicator-size:                 1rem !default;
 
 $custom-control-indicator-bg:                   $color-bg-gray !default;
 $custom-control-indicator-box-shadow:           none !default;
