--- a/src/assets/scss/page.scss
+++ b/src/assets/scss/page.scss
@@ -17,7 +17,7 @@
 @import "vendor/fontawesome";
 //@import "vendor/fontawesome5";
 // @import "vendor/et-line-icon";
-@import "vendor/themify-icons";
+// @import "vendor/themify-icons";
 // @import "vendor/jarallax";
 // @import "vendor/slick";
 // @import "vendor/lity";
