--- a/src/assets/scss/page.scss
+++ b/src/assets/scss/page.scss
@@ -14,8 +14,8 @@
 // @import "vendor/constellation";
 // @import "vendor/countdown";
 // @import "vendor/countup";
-@import "vendor/fontawesome";
-//@import "vendor/fontawesome5";
+// @import "vendor/fontawesome";
+@import "vendor/fontawesome5";
 // @import "vendor/et-line-icon";
 // @import "vendor/themify-icons";
 // @import "vendor/jarallax";
