use react-fontawesome

--- a/src/assets/scss/page.scss
+++ b/src/assets/scss/page.scss
@@ -15,7 +15,7 @@
 // @import "vendor/countdown";
 // @import "vendor/countup";
 // @import "vendor/fontawesome";
-@import "vendor/fontawesome5";
+// @import "vendor/fontawesome5";
 // @import "vendor/et-line-icon";
 // @import "vendor/themify-icons";
 // @import "vendor/jarallax";
