--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -87,3 +87,12 @@ h1 {
 .container-small {
   max-width: 760px;
 }
+
+.markdown {
+  h1, h2, h3, h4, h5, h6 {
+    margin-top: 2rem;
+  }
+  li {
+    margin-bottom: 1rem;
+  }
+}
