--- a/src/assets/scss/layout/_grid.scss
+++ b/src/assets/scss/layout/_grid.scss
@@ -25,7 +25,6 @@
   &.gap-5 { @include row-x-gap(30px) } // We can't have more than 30px, because of .container
 
 
-
   &.gap-y {
     @include row-y-gap(30px);
 
@@ -34,6 +33,10 @@
     &.gap-3 { @include row-y-gap(30px) }
     &.gap-4 { @include row-y-gap(30px) } // We can't have more than 30px, because of .container
     &.gap-5 { @include row-y-gap(30px) } // We can't have more than 30px, because of .container
+  }
+
+  &.gap-y2 {
+    @include row-y-gap2(30px);
   }
 
 }
