--- a/src/assets/scss/mixins/_grid.scss
+++ b/src/assets/scss/mixins/_grid.scss
@@ -50,6 +50,13 @@
   }
 }
 
+@mixin row-y-gap2($size) {
+  > .col,
+  > [class*="col-"] {
+    padding-top: $size/2;
+    padding-bottom: $size;
+  }
+}
 
 
 @mixin masonry-gap($size) {
