--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -275,6 +275,15 @@ $sizes: (
   100: 100%
 ) !default;
 
+// Responsiveness
+//
+// Bootstrap breakpoints
+$breakpoint-xs: 0;
+$breakpoint-sm: 576px;
+$breakpoint-md: 768px;
+$breakpoint-lg: 992px;
+$breakpoint-xl: 1200px;
+
 // Body
 //
 // Settings for the `<body>` element.
