--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -6,8 +6,20 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  padding-top: $padding + $navbar-min-height;
-  padding-bottom: $padding;
+  padding-top: $padding/2 + $navbar-min-height;
+  padding-bottom: $padding/2;
+  text-align: center;
+
+  @media screen and (min-width: $breakpoint-md) {
+    padding-top: $padding/1.5 + $navbar-min-height;
+    padding-bottom: $padding/1.5;
+  }
+
+  @media screen and (min-width: $breakpoint-lg) {
+    padding-top: $padding + $navbar-min-height;
+    padding-bottom: $padding;
+    text-align: left;
+  }
   //background-color: #f1f3f6;
 
   > .container,
