--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -112,6 +112,8 @@ h1 {
     border-left: map-get($pale-colors, 'info') 0.2em solid;
     padding-left: map-get($spacers, 3);
     margin-left: map-get($spacers, 2);
-
+  }
+  .katex {
+    font-size: 1em;
   }
 }
