--- a/src/assets/scss/_theme.scss
+++ b/src/assets/scss/_theme.scss
@@ -57,7 +57,7 @@ $color-bg-gray:               #f9f9f9;
 $color-text:                  #495057;
 
 $font-family-base:            "Work Sans", sans-serif;
-$font-family-title:           "Slabo 27px", sans-serif;
+$font-family-title:           "Quicksand", sans-serif;
 
 $font-size-base:              1.0625rem;
 
