--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -13,13 +13,18 @@
   text-align: center;
 
   @include media-breakpoint-up(md) {
-    padding-top: $padding/1.5 + $navbar-min-height;
-    padding-bottom: $padding/1.5;
+    padding-top: $padding/2 + $navbar-min-height;
+    padding-bottom: $padding/2;
     padding-right: $padding/3;
     padding-left: $padding/3;
   }
 
   @include media-breakpoint-up(lg) {
+    padding-top: $padding/1.5 + $navbar-min-height;
+    padding-bottom: $padding/1.5;
+    text-align: left;
+  }
+  @include media-breakpoint-up(xl) {
     padding-top: $padding + $navbar-min-height;
     padding-bottom: $padding;
     text-align: left;
