--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -8,9 +8,27 @@
 
 p > a,
 li > a {
-  border-bottom: 1px solid $color-primary;
-  padding-bottom: 1px;
+  position: relative;
+  font-weight: 400;
+  &:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    height: 1.2rem;
+    width: 100%;
+    border-bottom: 1px solid;
+    margin-top: 8px;
+    opacity: 0;
+    transition: 300ms;
+    transform: scale(0,1);
+  }
+  &:hover:after {
+    opacity: 1;
+    transform: scale(1);
+    box-shadow: 0 5px 4px -4px rgba(0, 94, 133, 0.25);
+  }
 }
+
 .text-white a {
   border-bottom-color: rgba(255, 255, 255, 0.8);
 }
@@ -30,7 +48,7 @@ li > a {
   transition: all 0.3s; 
   padding: 7px 21px;
   &:hover {
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    box-shadow: 0 12px 24px rgba(0,0,0,0.25), 0 8px 8px rgba(0,0,0,0.22);
     transition: all 0.3s;
     transform: translateZ(10px) scale(1.02) !important;
   }
@@ -198,7 +216,7 @@ h1 {
     margin-top: 2.5%;
   }
   @include media-breakpoint-up(lg) {
-    width: 110%;
+    width: 105%;
     margin-top: 15%;
     }
   @include media-breakpoint-up(xl) {
@@ -218,4 +236,21 @@ h1 {
       max-width: 1400px;
     }
   }
+}
+
+.adjust-bottom {
+  margin-bottom: 1px;
+}
+
+@keyframes swinging {
+  from { transform: translateX(0px); }
+  70%  { transform: translateX(7px); }
+  to   { transform: translateX(0px); }    
+}
+
+.swinging {  
+  animation-name: swinging;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-out;
 }
