--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -138,7 +138,7 @@ h1 {
 }
 
 .container-small {
-  max-width: 760px;
+  max-width: 832.5px;
 }
 
 .about {
@@ -163,7 +163,8 @@ h1 {
     margin-top: 2rem;
   }
   li {
-    margin-bottom: 1rem;
+    margin-bottom: map-get($spacers, 1);
+    padding-left: map-get($spacers, 2);
   }
   blockquote {
     border-left: map-get($pale-colors, "info") 0.2em solid;
@@ -171,7 +172,7 @@ h1 {
     margin-left: map-get($spacers, 2);
   }
   figure {
-    max-width: 600px;
+    max-width: 700px;
   }
   hr {
     clear: both;
