--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -45,9 +45,9 @@ li > a {
   transition: all 0.3s; 
   padding: 7px 21px;
   &:hover {
-    box-shadow: 0 4px 0px rgba(0,0,0,.5);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.25), 0 6px 6px rgba(0,0,0,0.22);
     transition: all 0.3s;
-    transform: translateZ(10px) scale(1.02) !important;
+    transform: translateZ(10px) !important;
   }
   &:focus, &:active {
     box-shadow: none !important;
@@ -263,6 +263,3 @@ h1 {
   }
 }
 
-.social-item:hover {
-  box-shadow: 0 12px 24px rgba(0,0,0,0.25), 0 8px 8px rgba(0,0,0,0.22);
-}
