--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -225,6 +225,9 @@ h1 {
      min-height: 95vh; 
     }
   }
+}
+
+.home-banner, .navbar {
   @media screen and (min-width: 1440px) {
     .container {
       max-width: 1400px;
