--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -27,6 +27,9 @@ li > a {
     opacity: 1;
     transform: scale(1);
   }
+  @include media-breakpoint-up(sm) {
+    white-space: nowrap;
+  }
 }
 
 .text-white p {
