--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -282,3 +282,37 @@ h1 {
     color: white !important;
   }
 }
+
+.top-page-feature-card {
+  position: relative;
+  padding: 30px 30px 30px 70px;
+  height: 100%;
+  overflow: hidden;
+  border-radius: 5px;
+  transition: 200ms;         
+  p {
+    color: #495057;
+    line-height: 27px;
+  }
+  &:hover {
+    h5, svg {
+      filter: grayscale(0.7);
+    }
+  }
+}
+
+.top-page-feature-icon {
+  position: absolute;
+  left: -10px;
+  font-size: 50px;
+  top: 50%;
+  margin-top: -25px;
+}
+
+.hover-translateY {
+  transition: 200ms;
+  &:hover {
+    transform: translateY(-2px);
+    transition: 200ms;
+  }
+}
