--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -15,6 +15,7 @@ li > a {
     content: '';
     position: absolute;
     left: 0;
+    bottom: -3px;
     height: 1.2rem;
     width: 100%;
     border-bottom: 1px solid;
