fix icons TopPageFeatureCard

--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -285,12 +285,11 @@ h1 {
 }
 
 .top-page-feature-card {
-  position: relative;
-  padding: 30px 30px 30px 70px;
+  padding: 30px 30px 30px 20px;
   height: 100%;
   overflow: hidden;
   border-radius: 5px;
-  transition: 200ms;         
+  transition: 200ms; 
   p {
     color: #495057;
     line-height: 27px;
@@ -300,15 +299,12 @@ h1 {
       filter: grayscale(0.7);
     }
   }
+  .top-page-feature-icon {
+    font-size: 30px;
+    margin-right: 20px;
+  }
 }
 
-.top-page-feature-icon {
-  position: absolute;
-  left: -10px;
-  font-size: 50px;
-  top: 50%;
-  margin-top: -25px;
-}
 
 .hover-translateY {
   transition: 200ms;
