Add newsletter button to footer

--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -293,7 +293,26 @@ h1 {
   .nav-link:hover {
     color: white !important;
   }
+
+  .newsletter-signup-CTA {
+    a {
+      width: max-content;
+      .newsletter-icon {
+        @include media-breakpoint-down(md) {
+          display: initial;
+        }
+        @include media-breakpoint-up(md) {
+          display: none;
+        }
+        @include media-breakpoint-up(lg) {
+          display: initial;
+        }
+      }
+    }
+  }
 }
+
+
 
 .top-page-feature-card {
   padding: 30px 30px 30px 20px;
