--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -162,9 +162,19 @@ h1 {
   }
 }
 
+$markdown-font-size: 1.2rem;
+$markdown-spacer: $markdown-font-size;
+
 .markdown {
-  font-size: 1.2rem;
   max-width: 720px;
+
+  font-size: $markdown-font-size;
+  h1 { font-size: 1.12 * $markdown-font-size; }
+  h2 { font-size: 1.10 * $markdown-font-size; }
+  h3 { font-size: 1.08 * $markdown-font-size; }
+  h4 { font-size: 1.06 * $markdown-font-size; }
+  h5 { font-size: 1.04 * $markdown-font-size; }
+  h6 { font-size: 1.02 * $markdown-font-size; }
 
   h1,
   h2,
@@ -172,7 +182,8 @@ h1 {
   h4,
   h5,
   h6 {
-    margin-top: 2rem;
+    margin-top: 2 * $markdown-spacer;
+    margin-bottom: 0.5 * $markdown-spacer;
   }
   li {
     margin-bottom: map-get($spacers, 1);
