Conditionally show calculator banner on calculator page

--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -93,6 +93,10 @@ h1 {
   max-width: 500px;
 }
 
+.calculator-banner h1, .banner-text {
+  max-width: 800px;
+}
+
 .section-header p {
   font-size: inherit;
 }
