implement publicity banner

--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -425,7 +425,7 @@ $markdown-spacer: $markdown-font-size;
   border-width: thin;
 }
 
-.follow-us-banner {
+.publicity-banner {
   bottom: 18px;
   left: 50%;
   transform: translate(-50%);
@@ -437,7 +437,7 @@ $markdown-spacer: $markdown-font-size;
   }
 }
 
-.follow-us-banner--button {
+.publicity-banner--button {
   font-size: 20px;
   line-height: 10px;
   transition: 200ms;
