--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -435,6 +435,9 @@ $markdown-spacer: $markdown-font-size;
   @include media-breakpoint-up(md) {
     width: 80vw;
   }
+  p {
+    margin-bottom: 0;
+  }
 }
 
 .publicity-banner--button {
