add spinner to app shell

--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -102,6 +102,10 @@ h1 {
   max-width: 500px;
 }
 
+.loader-banner {
+  height: 100vh;
+}
+
 .calculator-banner h1, .banner-text {
   max-width: 800px;
 }
