--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -108,6 +108,10 @@ h1 {
   justify-content: center;
   align-items: center;
   color: $navbar-light-color;
+  svg {
+    width: 4rem;
+    animation: fa-spin 2s infinite linear;
+  }
 }
 
 .calculator-banner h1, .banner-text {
