--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -110,7 +110,15 @@ h1 {
   color: $navbar-light-color;
   svg {
     width: 4rem;
-    animation: fa-spin 2s infinite linear;
+    animation: rotation 2s infinite linear;
+  }
+}
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
   }
 }
 
