Add FullWidthBanner and add lawyer prompt on partners page

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -49,6 +49,7 @@ $color-bg-light:                  #f5f6f7 !default;
 $color-bg-body:                   #ffffff !default;
 $color-bg-dark:                   #191919 !default;
 $color-bg-gray:                   #fafbfb !default;//f8f8f8
+$color-bg-light-blue:             #f2fcfd !default;
 
 // Text colors
 $color-text-darker:               #323d47 !default;
