--- a/src/assets/css/page.css
+++ b/src/assets/css/page.css
@@ -41,6 +41,7 @@ $color-bg-light:              #f5f6f7;
 $color-bg-body:               #ffffff;
 $color-bg-dark:               #191919;
 $color-bg-gray:               #f9f9f9;
+$color-bg-light-blue:         #f2fcfd;
 */
 :root {
   --blue: #50a1ff;
