--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -98,6 +98,10 @@ h1 {
   }
 }
 
+.width-fit-content {
+  width: fit-content;
+}
+
 .home-banner h1, .banner-text {
   max-width: 500px;
 }
@@ -383,7 +387,6 @@ $markdown-spacer: $markdown-font-size;
     }
   }
 }
-
 
 
 .partner-card {
