Replace smartuplaw image and fix fit

--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -397,6 +397,9 @@ $markdown-spacer: $markdown-font-size;
   a {
     font-size: 0.75rem;
   }
+  img {
+    object-fit: unset !important;
+  }
 }
 
 
