include spinner in newsletter button while loading

--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -119,6 +119,11 @@ h1 {
     animation: rotation 2s infinite linear;
   }
 }
+
+.spin {
+  animation: rotation 2s infinite linear;
+}
+
 @keyframes rotation {
   from {
     transform: rotate(0deg);
