Make company content sticky

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -189,6 +189,7 @@ $font-small: (
 // $zindex-popover:                    1060 !default;
 // $zindex-tooltip:                    1070 !default;
 
+$zindex-company-content:             999 !default;
 $zindex-navbar:                     1000 !default;
 $zindex-topbar:                     1001 !default;
 $zindex-scrolltop:                  1000 !default;
