--- a/src/assets/scss/block/_company-content.scss
+++ b/src/assets/scss/block/_company-content.scss
@@ -2,6 +2,8 @@
   background: $color-bg-body;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   border-radius: 6px;
+  top: $navbar-min-height;
+  z-index: $zindex-company-content;
 }
 
 .company-content-logo {
