--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -318,6 +318,10 @@ $sidebar-width:             240px !default;
 //
 $drawer-width:              300px !default;
 
+// User story - company content
+//
+$top-company-content:       70px !default; // $navbar-min-height + some extra
+
 // Components
 //
 // Define common padding and border radius sizes and more.
