--- a/src/assets/scss/block/_company-content.scss
+++ b/src/assets/scss/block/_company-content.scss
@@ -2,7 +2,7 @@
   background: $color-bg-body;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   border-radius: 6px;
-  top: $navbar-min-height;
+  top: $top-company-content;
   z-index: $zindex-company-content;
 }
 
