More spacing between user stories sections

--- a/src/assets/scss/block/_user-stories.scss
+++ b/src/assets/scss/block/_user-stories.scss
@@ -1,3 +1,11 @@
+.user-story-section {
+  margin-bottom: 10rem;
+}
+
+.other-user-stories-section {
+  border-top: 1px solid $gray-200;
+}
+
 .company-content {
   background: $color-bg-body;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
