--- a/src/assets/scss/page.scss
+++ b/src/assets/scss/page.scss
@@ -69,7 +69,6 @@
 
 // Blocks
 //
-@import "block/company-content";
 @import "block/feature";
 @import "block/partner";
 @import "block/portfolio";
@@ -77,6 +76,7 @@
 @import "block/pricing";
 @import "block/shop";
 @import "block/team";
+@import "block/user-stories";
 
 // Layout
 //
