Replace user stories -> customer stories

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -318,7 +318,7 @@ $sidebar-width:             240px !default;
 //
 $drawer-width:              300px !default;
 
-// User story - company content
+// Customer Stories - company content
 //
 $top-company-content:       70px !default; // $navbar-min-height + some extra
 
