--- a/src/assets/scss/page.scss
+++ b/src/assets/scss/page.scss
@@ -69,6 +69,7 @@
 
 // Blocks
 //
+@import "block/customer-stories";
 @import "block/feature";
 @import "block/partner";
 @import "block/portfolio";
@@ -76,7 +77,6 @@
 @import "block/pricing";
 @import "block/shop";
 @import "block/team";
-@import "block/user-stories";
 
 // Layout
 //
