Style company quote
It is a long text, an Mdx node.

--- a/src/assets/scss/block/_customer-stories.scss
+++ b/src/assets/scss/block/_customer-stories.scss
@@ -17,3 +17,10 @@
 .company-content-logo {
   max-width: 120px;
 }
+
+.company-content-quote {
+  font-style: italic;
+  font-weight: normal;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+}
