--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -189,7 +189,7 @@ $font-small: (
 // $zindex-popover:                    1060 !default;
 // $zindex-tooltip:                    1070 !default;
 
-$zindex-company-content:             999 !default;
+$zindex-company-summary:             999 !default;
 $zindex-navbar:                     1000 !default;
 $zindex-topbar:                     1001 !default;
 $zindex-scrolltop:                  1000 !default;
@@ -320,7 +320,7 @@ $drawer-width:              300px !default;
 
 // Customer Stories - company content
 //
-$top-company-content:       70px !default; // $navbar-min-height + some extra
+$top-company-summary:       70px !default; // $navbar-min-height + some extra
 
 // Components
 //
