--- a/src/assets/scss/block/_customer-stories.scss
+++ b/src/assets/scss/block/_customer-stories.scss
@@ -10,7 +10,7 @@
   background: $color-bg-body;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   border-radius: 6px;
-  top: $top-company-summary;
+  top: calc(#{$navbar-min-height} + 15px);
   z-index: $zindex-company-summary;
 }
 
