--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -585,3 +585,27 @@ button.multi-button.bg-primary:focus {
 .min-width-120px {
   min-width: 120px;
 }
+
+.customer-story-section {
+  margin-bottom: 10rem;
+}
+
+.other-customer-stories-section {
+  border-top: 1px solid $gray-200;
+}
+
+.company-summary {
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  top: calc(#{$navbar-min-height} + 15px);
+  z-index: $zindex-company-summary;
+}
+
+.company-summary-logo {
+  max-width: 120px;
+}
+
+.company-summary-quote {
+  font-style: italic;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+}
