improve responsive container size

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -1,7 +1,15 @@
 
-@media screen and (min-width: 1440px) {
-  .container {
+.container {
+  @include media-breakpoint-up(xl) {
+    max-width: 1050px;
+  }
+  // xxl displays
+  @media screen and (min-width: 1440px) {
     max-width: 1350px;
+  }
+  // 4k displays
+  @media screen and (min-width: 2160px) {
+    max-width: 1600px;
   }
 }
 
