--- a/src/styles/_html.scss
+++ b/src/styles/_html.scss
@@ -13,7 +13,7 @@ body.overlay {
   overflow: hidden;
 }
 
-html, body, div, a, li, button, input {
+html, body, div, li, button, input {
   font-size: $ledgy-font-size;
   line-height: $line-height-base;
 }
