use local images for customer stories

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -391,7 +391,7 @@ $deco-dot-size: 8px;
 }
 
 // Card
-.card.custom-card {
+.card-blog {
   min-height: 250px;
   & .gatsby-image-wrapper {
     position: static !important;
