--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -3,6 +3,9 @@
   @include media-breakpoint-up(xl) {
     max-width: 1050px;
   }
+   @media screen and (min-width: 1440px) {
+    max-width: 1200px;
+  }
 }
 
 // Home Banner
