fix broken buttons

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -14,7 +14,7 @@
     transform: none !important;
   }
 }
-.btn-primary {
+.multi-button.btn-primary {
   &:hover {
     background-color: $deep-blue;
     border-color: $deep-blue !important;
