fix button hover states and padding

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -21,6 +21,10 @@
   }
 }
 
+.btn-light:hover {
+  background-color: darken($white, 0.1);
+}
+
 .button-disabled {
   pointer-events: none;
   opacity: 0.5;
