--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -15,6 +15,12 @@
   }
 }
 
+@media screen and ( max-height: 699px ) {
+  .sticky-top {
+    position: unset !important;
+  }
+}
+
 // Desktop properties
 
 .desktop-navbar {
@@ -48,6 +54,7 @@
 }
 
 .hover-list-child {
+  z-index: $zindex-popup;
   opacity: 0;
   position: absolute;
   overflow: hidden;
@@ -115,6 +122,7 @@
 }
 
 .dropdown-background {
+  z-index: $zindex-popup;
   width: 100px;
   height: 100px;
   border-radius: 0.25rem;
